Fixed import of redis in setup.py
- redis was imported before being installed in setup.py
- small setup refactor
- pep8 corrections
- installing dependencies project with pip on the setup.py
- fixed travis to properly install test dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:
   - "3.6"
-install: "pip install -r requirements.txt"
-script: make clean coverage docs dist
+install: "pip install ."
+script: make clean test coverage docs dist
 deploy:
   provider: pypi
   user: nottyo
