--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "3.9"
+before_install:
+  - pip install urllib3==1.26.16
 install: "pip install -r requirements.txt"
 script: make clean test coverage docs dist
 deploy:
